tests/ui/sized-hierarchy/pointee-validation.stderr
error[E0658]: const trait impls are experimental
  --> $DIR/pointee-validation.rs:8:23
   |
LL | struct Test where (): const PointeeSized<(), Undefined = ()>;
   |                       ^^^^^
   |
   = note: see issue #67792 <https://github.com/rust-lang/rust/issues/67792> for more information
   = help: add `#![feature(const_trait_impl)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0107]: trait takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/pointee-validation.rs:8:29
   |
LL | struct Test where (): const PointeeSized<(), Undefined = ()>;
   |                             ^^^^^^^^^^^^-------------------- help: remove the unnecessary generics
   |                             |
   |                             expected 0 generic arguments

error: `const` can only be applied to `#[const_trait]` traits
  --> $DIR/pointee-validation.rs:8:23
   |
LL | struct Test where (): const PointeeSized<(), Undefined = ()>;
   |                       ^^^^^ can't be applied to `PointeeSized`
   |
note: `PointeeSized` can't be used with `const` because it isn't annotated with `#[const_trait]`
  --> $SRC_DIR/core/src/marker.rs:LL:COL

error[E0220]: associated type `Undefined` not found for `PointeeSized`
  --> $DIR/pointee-validation.rs:8:46
   |
LL | struct Test where (): const PointeeSized<(), Undefined = ()>;
   |                                              ^^^^^^^^^ associated type `Undefined` not found

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0107, E0220, E0658.
For more information about an error, try `rustc --explain E0107`.
